# dtp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md
examples/: CMakeLists.txt
examples/buffer/: CMakeLists.txt  Makefile  nm-build.cmake
examples/buffer/nm0/: main.cpp  mc12101brd-nmc0.lds
examples/buffer/nm1/: main.cpp  mc12101brd-nmc1.lds
examples/buffer/pc/: pc-main.cpp
examples/dma/: Makefile  main.cpp
examples/file/: CMakeLists.txt  main.cpp
examples/file2/: CMakeLists.txt  main.cpp  mc12101brd.lds
examples/link/: CMakeLists.txt  Makefile  main.cpp  main0.cpp  main1.cpp  mc12101brd-nmc0.lds  mc12101brd-nmc1.lds  mc12101brd0.lds  mc12101brd1.lds
examples/nm-pc/: CMakeLists.txt
examples/socket/: CMakeLists.txt  client.cpp  server.cpp
include/debr/: debr.h
include/dtp/: buffer.h  dtp-hal.h  dtp.h  file.h  mc12101-host.h  mc12101.h  nm6407.h  pload.h  ringbuffer.h  socket.h
include/dtp/nm6407/: dma.h
specification/dtp/: README.md  dtp.h  file.h  nm6407.h  shm.h  socket.h
src/: buffer.c  debr.cpp  dtp-core.h  dtp.cpp  dtp_utils.h  file.c  file.cpp  link-core.h  nmsemaphore.h  ringbuffer.c  ringbuffer.h  tdl.hpp  uassert.h  uassert.hs
src/nm/: buffer.cpp  dma-nm6407.cpp  halSleep.S  mc12101.cpp  ringbuffer.cpp  rtmacro.mlb  semaphore.S  spi.cpp
src/nm6407/: default-buffer.c  dma.c  dtp-nm6407-core.h  dtpLinkInit.S  dtpLinkStart.S  link.c  ringbuffer.c  usb.cpp
src/pc/: buffer.cpp  mc12101.cpp  ringbuffer.cpp  socket.c  socket.cpp
src/x64/: ringbuffer.c  usb.cpp
tests/: CMakeLists.txt  host.cpp  link.cpp  mc12101brd.lds  nm-part.cpp  shmem.cpp
tests/cmake/: nm-build.cmake
tests/mc12101/: CMakeLists.txt  host.cpp  mc12101brd0.lds  mc12101brd1.lds  nm-part0.cpp  nm-part1.cpp
tests/nm6407/: CMakeLists.txt  buffer.cpp  dma.cpp  half-duplex-test.cpp  mc12101brd-nm0.lds  mc12101brd-nm1.lds
tests/x86/: CMakeLists.txt  buffer.cpp
